--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Learning to code one day at a time!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Bloomington, Minnesota</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Skiing and adventuring</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Freelance web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Bloomington, Minnestoa</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to create things</p>
     </section>
 
     <footer id="footer">
